--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="asset/fav-icon.png">
+    <link rel="icon" type="image/x-icon" href="fav-icon.png">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
 
     <div class="hero-section">
         <div class="hero-img">
-            <img src="asset/hero_image.png" alt="">
+            <img src="hero_image.png" alt="">
         </div>
         <div class="hero-text container">
             <h1>myTunes</h1>
@@ -56,7 +56,7 @@
             <button class="pad">start Your Trail Now !</button>
             <p class="white pad">Orange Music is available in myTunes, and for iOS and Android devices.</p>
             <div class="img">
-                <img src="asset/ipad-iphone.png" alt="">
+                <img src="ipad-iphone.png" alt="">
             </div>
         </div>
     </div>
@@ -71,7 +71,7 @@
             anytime, anywhere. Just tap to play, or even download if you're going somewhere you won't have Wi-Fi.</p>
         <button>Read More !</button>
         <div class="img-3">
-            <img src="asset/mac.png" alt="">
+            <img src="mac.png" alt="">
         </div>
     </div>
 
@@ -91,7 +91,7 @@
 
     <div class="section-5 container">
         <div class="left">
-            <img src="asset/gift_card.png" alt="">
+            <img src="gift_card.png" alt="">
         </div>
         <div class="right">
             <h1 class="pad">Gift Cards</h1>
