--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem veniam nobis, nisi ut
                 expedita, doloribus reprehenderit explicabo non velit repellat alias saepe inventore repellendus?
                 Molestias suscipit eos tempora? Quae quaerat cumque in veritatis impedit dolorum sapiente recusandae
-                minima quo aperiam quam, excepturi quasi totam ad quas? Ipsam laudantium soluta delectus!
+                minima quo aperiam quam, excepturi quasi totam ad quas? Ipsaam laudantium soluta delectus!
         </div>
     </div>
 
